Updated collapsible widget to allow buttons to be programtically invoked and to have a minimum height to prevent animation jumping when expanded size is smaller than collapsed size

--- a/htdocs/css/cdt/widget/collapsible.less
+++ b/htdocs/css/cdt/widget/collapsible.less
@@ -4,6 +4,7 @@
   left: 0;
 
   padding-right: 30px;
+  min-height: 35px;
 }
 
 .cdt-collapsible-collapsed .cdt-collapsible-content {
